--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -6,7 +6,7 @@ name: Generate Snake
 
 on:
   schedule:
-    # 6시간마다 한 번(수정 가능)
+    # 1간마다 한 번(수정 가능)
     - cron: "0 */1 * * *"
 
   # 자동으로 Action이 실행되도록 함
@@ -34,7 +34,7 @@ jobs:
         uses: ad-m/github-push-action@master
         with:
           github_token: ${{ secrets.GH_TOKEN }}
-          branch: master
+          branch: main
           force: true
 
       - uses: crazy-max/ghaction-github-pages@v2.1.3
